# demo-analytic-app

./: Dockerfile  Makefile  README.md  conftest.py  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  setup.cfg
analytics/: admin.py  models.py  urls.py
analytics/interfaces/: __init__.py  query_builders.py
analytics/management/commands/: loadsampledata.py
analytics/migrations/: 0001_initial.py
analytics/serializers/: __init__.py  insights.py
analytics/services/: load_sample.py
analytics/tests/: test_interface_cpi.py  test_interface_filters.py  test_interface_grouping.py  test_interface_ordering.py  test_view.py
analytics/views/: __init__.py  insights.py
main/: .env.example  settings.py  urls.py
